--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -169,7 +169,8 @@ body{
 }
 .post .user-answer{
     clear: both;
-    padding: 10px 0px 10px 0px;
+    display: flex;
+    align-items: center
 }
 .post .user-detail{
     padding-top: 13px;
@@ -180,6 +181,7 @@ body{
     font-size: 12px;
     float: left;
     padding-right: 20px;
+    display: flex;
 }
 .content-asw{
     clear: both;
