--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -120,7 +120,7 @@ body{
     /* padding-bottom:30px;
     margin-bottom: 40px; */
 }
-.fa{
+.fa,.fas{
     color: #19ab27
 }
 .post header h2{
@@ -311,6 +311,9 @@ body, input, textarea {
     font-size: 11px;
 }
 .navbar-inverse {
+  height: 46px;
+  display: flex;
+  align-items: center;
   background-image: linear-gradient(123deg, #5e8e5e, #157317,#2b8c2d);
     /* background-color: #222; */
   /* border-color: #080808; */
