--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -23,7 +23,12 @@ header .dropdown-menu>li>a{
     color: #333;
     /* color: #f5f5f5; */
     border-radius: 5px;
-    margin-bottom: 2px
+    margin-bottom: 2px;
+    box-shadow: 5px 5px 5px 5px #777;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 196px rgba(0, 0, 0,1);
+    z-index: 999;
 }
 .question,.vote,.post-toggle{
     float: left;
