--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -146,10 +146,12 @@ img{
 }
 .post .user-avatar{
     float: left;
-    padding-top: 8px;
+    /* padding-top: 8px; */
     /* padding-right: 37px; */
     /* padding: 0px; */
-    width: 46px;
+    width: 40px;
+    display: flex;
+    height: 40px;
 }
 .img-user{
     width: 26px;
@@ -450,7 +452,7 @@ padding: 2px;
 .div-list-img-post{
   padding-top: 8px;
   padding-bottom: 8px;
-  height: 112px;
+  /* height: 112px; */
   width: 100%;
   overflow: hidden;
 }
