--- a/assets/styles/userpage.css
+++ b/assets/styles/userpage.css
@@ -379,6 +379,8 @@ section#user_main div.content-main .head{
 }
 .user-name a{
     color :#4dab28;
+    display: flex;
+    align-items: center;
 }
 .text-rep a{
     color :#4dab28;
@@ -565,7 +567,10 @@ pointer-events: none;
    margin-right: 6px;
 }
 .list-tag-feel a{
-    margin-left:3px;
+  /* margin-left: 3px; */
+  margin-right: 5px;
+  color: #327417;
+    float: left;
 }
 .police-post{
   display: flex;
@@ -604,11 +609,16 @@ pointer-events: none;
   padding: 2px 8px;
   background: #f5f6f7;
   font-size: 13px;
+  align-items: center;
+    display: flex;
 }
 .select-police
 .dropdown-menu>li>a{
   padding: 3px 6px;
   font-size: 13px;
+  align-items: center;
+    display: flex;
+
 }
 .button-post{
   box-sizing: border-box;
@@ -631,4 +641,37 @@ pointer-events: none;
 .button-post:hover{
   background-color: #134014;
   border-color:#134014;
+}
+.number-other-tag{
+  margin-left: 5px;
+  margin-right: 5px;
+  color: #327417;
+  font-size: 13px;
+  float: left;
+}
+.div-list-img-post img{
+  display: block;
+  width: 100%;
+  /* object-fit: contain; */
+  height: 186px;
+  object-fit: fill;
+  height: 117px;
+}
+.text-tag{
+  display: block;
+  margin-right: 3px;
+  color: #737475;
+  font-weight: 400;
+
+}
+.div-feel{
+  color: #616770;
+  font-weight: 100;
+}
+.icon-police-post{
+    width: 27px;
+}
+.icon-police-post img,.icon-plice-image{
+    width: 13px;
+    height: 13px;
 }
