--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -235,7 +235,8 @@ img {
   cursor: pointer;
   font-size: 14px;
   padding: 10px 15px 10px 15px;
-  color: #90949c;
+  color: #aaaeb7;
+  font-weight: bold;
 }
 .footer-post .btn-footer-post:hover {
   background: #f5f5f5;
@@ -501,6 +502,7 @@ div[contenteditable="true"]:focus {
   width: 100%;
   height: 130px;
   margin: -41px 0 0;
+  display: flex;
 }
 .info-user-popup .img-avatar {
   width: auto;
@@ -530,7 +532,7 @@ div[contenteditable="true"]:focus {
   background-image: url(/images/user/linh.jpg);
 }
 .popup-content {
-  width: 303px !important;
+  width: 344px !important;
   background: rgb(255, 255, 255);
   border: 1px solid rgb(187, 187, 187);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px;
@@ -540,7 +542,7 @@ div[contenteditable="true"]:focus {
   left: -287px !important; */
 }
 .info-user-popup .name-user {
-  display: flex;
+  /* display: flex; */
   color: white;
   font-size: 14px;
   /* margin-top: -12px; */
@@ -569,16 +571,21 @@ div[contenteditable="true"]:focus {
 .card .info-data {
   line-height: 18px;
   padding-top: 10px;
+  padding-right: 2px;
 }
 .row-data {
   display: flex;
+
 }
 .row-data .icon {
   /* width: 27px; */
 }
 .row-data .data {
-  display: flex;
+  /* display: flex; */
   margin-left: 8px;
+  color: #737475;
+  margin-bottom: 5px;
+
 }
 .footer-popup .btn-join{
   background-color: #f5f6f7;
@@ -606,4 +613,21 @@ div[contenteditable="true"]:focus {
   font-size: 10px;
   color: #4b4f56;
   margin-right: 4px;
+}
+.banner-popup .img-cover{
+  background: url(https://moki.vn/moki/themes/img/UgNUNkKQar6.png) bottom left repeat-x;
+    /* border-bottom-color: rgba(0,0,0,.4); */
+    /* border: 1px solid #ddd; */
+    /* border-color: rgba(0, 0, 0, .25); */
+    /* border-top-color: rgba(0, 0, 0, .1); */
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+}
+.info-data .data  a{
+font-weight: normal !important;
+font-weight: 400 !important;
 }
