--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -14,57 +14,56 @@
  * or any other Grunt tasks you like.)
  */
 
-#layout{
-    // background-color: rgba(175, 175, 226, 0.32);
-    height: 100%;
-    background: #e9ebef;
+#layout {
+  // background-color: rgba(175, 175, 226, 0.32);
+  height: 100%;
+  background: #e9ebef;
+  overflow: hidden;
 }
-.title-profile{
+.title-profile {
   float: left;
   padding-top: 30px;
 }
-.title-module{
+.title-module {
   font-size: 16px;
   font-weight: bold;
   padding-bottom: 20px;
 }
-.content-procfile{
+.content-procfile {
   padding-top: 20px;
   margin-top: 20px;
   font-size: 14px;
-  border-top: 1px solid #d2cbcb;}
-  
+  border-top: 1px solid #d2cbcb;
+}
 
-
-.content-module{
+.content-module {
   padding-bottom: 20px;
 }
 
 .menu-left ul li a {
-  color:black !important;
-
+  color: black !important;
 }
-.menu-left .dropdown-menu{
+.menu-left .dropdown-menu {
   position: relative !important;
 }
 
-.nav > li > a:hover, .nav > li > a:focus{
+.nav > li > a:hover,
+.nav > li > a:focus {
   // height: 50px !important;
   // background:#0c0000 !important
 }
 
-.title-project{
+.title-project {
   font-size: 21px;
   font-weight: bold;
   color: black !important;
 }
 
-#notification_li
-{
-position:relative
+#notification_li {
+  position: relative;
 }
-#notificationContainer ,#listRequesFriends
-{
+#notificationContainer,
+#listRequesFriends {
   background-color: #fff;
   border: 1px solid rgba(100, 100, 100, 0.4);
   -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
@@ -74,7 +73,7 @@ position:relative
   margin-left: -332px;
   width: 382px;
   z-index: 9999;
-  display: none; // Enable this after jquery implementation 
+  display: none; // Enable this after jquery implementation
 }
 // Popup Arrow
 // #notificationContainer:before {
@@ -89,19 +88,17 @@ position:relative
 // margin-top: -20px;
 // margin-left: 188px;
 // }
-#notificationTitle
-{
-font-weight: bold;
-padding: 8px;
-font-size: 12px;
-background-color: #ffffff;
-position: fixed;
-z-index: 1000;
-width: 380px;
-border-bottom: 1px solid #dddddd;
+#notificationTitle {
+  font-weight: bold;
+  padding: 8px;
+  font-size: 12px;
+  background-color: #ffffff;
+  position: fixed;
+  z-index: 1000;
+  width: 380px;
+  border-bottom: 1px solid #dddddd;
 }
-#notificationsBody
-{
+#notificationsBody {
   padding: 10px 0px 0px 0px !important;
   max-height: 454px;
   font-size: 12px;
@@ -119,14 +116,13 @@ border-bottom: 1px solid #dddddd;
   z-index: 9999;
   display: none;
 }
-#notificationFooter
-{
-// background-color: #e9eaed;
-text-align: center;
-font-weight: bold;
-padding: 8px;
-font-size: 12px;
-border-top: 1px solid #ece6e6
+#notificationFooter {
+  // background-color: #e9eaed;
+  text-align: center;
+  font-weight: bold;
+  padding: 8px;
+  font-size: 12px;
+  border-top: 1px solid #ece6e6;
 }
 .avatar-alert {
   width: 36px;
@@ -134,47 +130,44 @@ border-top: 1px solid #ece6e6
   border-radius: 50%;
   // margin-top: -4px;
 }
-.name-alert{
+.name-alert {
   float: left;
   padding-right: 5px;
   font-weight: 700;
   padding-top: 5px;
 }
-#notification_count 
-{
-padding: 3px 7px 3px 7px;
-background: #cc0000;
-color: #ffffff;
-font-weight: bold;
-margin-left: 29px;
-border-radius: 9px;
--moz-border-radius: 9px; 
--webkit-border-radius: 9px;
-position: absolute;
-margin-top: 2px;
-font-size: 11px;
+#notification_count {
+  padding: 3px 7px 3px 7px;
+  background: #cc0000;
+  color: #ffffff;
+  font-weight: bold;
+  margin-left: 29px;
+  border-radius: 9px;
+  -moz-border-radius: 9px;
+  -webkit-border-radius: 9px;
+  position: absolute;
+  margin-top: 2px;
+  font-size: 11px;
 }
-.alert-message{
- 
-  border-bottom:  1px solid #ece6e6;
-  
+.alert-message {
+  border-bottom: 1px solid #ece6e6;
+
   cursor: pointer;
 }
-#messagerContainer .alert-message{
+#messagerContainer .alert-message {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.alert-message:hover{
-  background: #eff5ec !important 
+.alert-message:hover {
+  background: #eff5ec !important;
 }
-.alert-message a{
-    color: #555
+.alert-message a {
+  color: #555;
 }
-.alert-message a :hover{
+.alert-message a :hover {
   text-decoration: none;
-  
-} 
-.time-alert{
+}
+.time-alert {
   color: #89908e;
   margin-bottom: 1px !important;
   font-size: 12px;
@@ -182,7 +175,7 @@ font-size: 11px;
 .beeperNub {
   right: 14px;
 }
- .beeperNub {
+.beeperNub {
   background-image: url(/images/hy_YMW55qwy.png);
   background-repeat: no-repeat;
   background-size: auto;
@@ -193,23 +186,19 @@ font-size: 11px;
   width: 20px;
 }
 
-
-#listRequesFriends .btn{
+#listRequesFriends .btn {
   font-size: 12px;
   padding: 4px 12px;
 }
 
-
-#listRequesFriends .user-request{
+#listRequesFriends .user-request {
   display: flex;
-    height: 48px;
-    /* justify-content: center; */
-    align-items: center;
-    justify-items: center;
-    background-color: white;
+  height: 48px;
+  /* justify-content: center; */
+  align-items: center;
+  justify-items: center;
+  background-color: white;
 }
-
-
 
 // #header{
 //   box-sizing: border-box;
@@ -227,19 +216,15 @@ font-size: 11px;
 //     min-height: 400px;
 // }
 
-
 // .sign{
 
 //     background-color: #edf1ee;
 
 // }
 
-
-
 // .navbar-right{
 //   padding-right: 30px;
 // }
-
 
 // //******
 
@@ -266,7 +251,6 @@ font-size: 11px;
 //   padding: 11px;
 // margin-left: 361px;
 // }
-
 
 // .layout-close-account{
 //   float: right;
@@ -367,7 +351,6 @@ font-size: 11px;
 //   font-weight: initial;
 // }
 
-
 // .tabs {
 //   margin: 25px;
 //   background: #fff;
@@ -443,7 +426,6 @@ font-size: 11px;
 // .navbar.navbar-inverse .nav-collapse.in {
 //     transform: translate(0px,0px);
 // }
-
 
 // @media screen and (max-width: 767px) {
 //     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
