--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -637,3 +637,64 @@ div[contenteditable="true"]:focus {
   padding-left: 10px;
   padding-right: 10px;
 }
+.login-page {
+  height: 100vh;
+  background-size: cover;
+  background-image: url(/images/banner/ll.png);
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-login {
+  margin-top: 50px;
+  width: 385px;
+  height: 549px;
+  background: white;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 3px -2px rgba(0, 0, 0, 0.12);
+}
+.title-website {
+  color: green;
+  font-size: 19px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.sub-title {
+  margin-bottom: 50px;
+  margin-top: 20px;
+  font-size: 13px;
+  color: #515a51;
+}
+.header-login {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.form-login .btn-login {
+  width: 100%;
+  background: green;
+  color: white;
+  opacity: 0.85;
+}
+.form-login .btn-login:hover {
+  opacity: 1;
+}
+.text-register {
+  margin-top: 8px;
+  align-items: center;
+  display: flex;
+}
+.footer-login {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 24px;
+  margin-top: 29px;
+  color: rgba(11, 17, 25, 0.64);
+}
+.text-support {
+  color: green;
+  font-weight: 500;
+}
