chinh sua listfirend responsive

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -199,260 +199,114 @@
   justify-items: center;
   background-color: white;
 }
+@media (max-width: 1560px) {
+  .list-friend {
+    background: white !important;
+    height: 365px !important;
+    left: auto;
+    right: 0;
+    bottom: -3px !important;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
+    font-size: 12px !important;
+    line-height: 16px !important;
+    position: fixed !important;
+  }
+  .list-friend .header .title {
+    color: #fff;
+    font-size: 12px;
+    padding: 0;
+    font-weight: bold;
+    line-height: 18px;
+    bottom: 0 !important;
+    display: flex;
+    position: relative !important;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 2px;
+    align-items: center;
+  }
+  .list-friend .header .text-title {
+    display: block !important;
+  }
+  .list-friend .header .title i {
+    display: flex !important;
+    font-size: 14px !important;
+    color: white !important;
+    margin-bottom: 0px !important;
+  }
+  .list-friend .list {
+    margin-top: 0px !important;
+  }
+}
+.list-friend .input-search {
+  z-index: 9999999;
+  position: absolute;
+  bottom: 0px;
+  padding-bottom: 2px;
+}
+.list-friend .input-search input {
+  border-right: none;
+  border-left: none;
+  padding-left: 0px;
+  padding-right: 0px;
 
-// #header{
-//   box-sizing: border-box;
-// position: fixed;
-// top: 0;
-// background-color: #001C20;
-// width: 100%;
-// z-index: 100;
-// height: 64px;
-// }
-
-// .content{
-//   float: right;
-//     padding: 20px;
-//     min-height: 400px;
-// }
-
-// .sign{
-
-//     background-color: #edf1ee;
-
-// }
-
-// .navbar-right{
-//   padding-right: 30px;
-// }
-
-// //******
-
-// .label-username {
-//     float: left;
-//     padding: 10px;
-//     font-size: 15px;
-//     /* font-weight: 700; */
-//     color: #57a757;
-// }
-// .label-time {
-//     color: wheat;
-//     float: left;
-//     padding: 13px;
-//     font-size: 13px;
-//     /* font-weight: 700; */
-// }
-// .div-logout{
-//   float: left;
-//     padding: 9px;
-//     font-size: 15px;
-// }
-// .user-inf{
-//   padding: 11px;
-// margin-left: 361px;
-// }
-
-// .layout-close-account{
-//   float: right;
-//   width: 79%;
-// }
-// .tab-menu-close-account{
-
-//   padding: 0px;
-//   margin-left: 11px;
-// }
-// .title-pannel-content{
-//   font-size: 18px;
-// }
-
-// .content-close-account{
-//   float:right;
-//   width:100%;
-//   padding:20px;
-//   minHeight:600px;
-
-// }
-// .content-close-account{
-//   float:right;
-//   padding:20px;
-//   minHeight:600px;
-
-// }
-// .button-delete{
-//   margin-left: 13px;
-// }
-// .title{
-//   /* padding: 2px; */
-// margin-top: 11px;
-// font-size: 20px;
-// width: 25%;
-// color: white;
-// text-align: center;
-// padding: 5px;
-// font-weight: 600;
-// margin-bottom: 27px;
-// /* float: left; */
-// /* padding-bottom: 45px; */
-// padding-top: 7px;
-// border-radius: 5px;
-// background-color: #1f7dce;
-
-// }
-// .title-popup{
-//   color: white;
-// padding: 2px;
-// font-size: 21px;
-// width: 98%;
-// font-weight: 700;
-// text-align: center;
-// padding: 5px;
-// margin-bottom: 27px;
-// /* float: left; */
-// /* padding-bottom: 45px; */
-// padding-top: 7px;
-// border-radius: 5px;
-// background-color: #2a72af;
-// }
-// .check-box-item{
-//       margin-left: 7px;
-// }
-// .popup-form{
-
-// }
-// .custom{
-//   padding-bottom: 13px;
-// font-size: 13px;
-// color: #1751d8;
-// }
-// .row{
-
-// }
-// .main{
-
-// }
-
-// .custom-nav{
-//   margin-bottom: 0px !important;
-// }
-// .pagesize{
-//   margin-top: 8px;
-//   color: #0953dc;
-// }
-// .div-pagesize{
-//   padding-top: 23px;
-// }
-// .select-pagesize{
-//    padding: 0px;
-//    width: 15%;
-// }
-
-// .tr-authorize{
-//   font-size: 12px;
-//   font-weight: initial;
-// }
-
-// .tabs {
-//   margin: 25px;
-//   background: #fff;
-//   border: 1px solid #e5e5e5;
-//   border-radius: 3px;
-// }
-// .tabs__labels {
-//   margin: 0;
-//   padding: 0;
-// }
-// .tabs__labels li {
-//   display: inline-block;
-// }
-// .tabs__labels li a {
-//   padding: 8px 12px;
-//   display: block;
-//   color: #444;
-//   text-decoration: none;
-//   border-bottom: 2px solid #f5f5f5;
-// }
-// .tabs__labels li a.active {
-//   border-bottom-color: #337ab7;
-// }
-// .tabs__content {
-//   padding: 25px;
-// }
-
-// .div-well{
-//   width:300px;
-//    padding: 8px 0;
-// }
-// .div-content-menu{
-//   overflow-y: scroll;
-//    overflow-x: hidden;
-//     height: 500px;
-// }
-// // for Nav content
-
-// /*
-// Code snippet by maridlcrmn for Bootsnipp.com
-// Follow me on Twitter @maridlcrmn
-// */
-
-// .navbar-brand { position: relative; z-index: 2; }
-
-// //.navbar-nav.navbar-right .btn { position: relative; z-index: 2; padding: 4px 20px; margin: 10px auto; transition: transform 0.3s; }
-
-// .navbar .navbar-collapse { position: relative; overflow: hidden !important; }
-// .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 22px; }
-
-// .navbar .nav-collapse { position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; margin: 0; padding-right: 120px; padding-left: 80px; width: 100%; }
-// .navbar.navbar-default .nav-collapse { background-color: #f8f8f8; }
-// .navbar.navbar-inverse .nav-collapse { background-color: #222; }
-// .navbar .nav-collapse .navbar-form { border-width: 0; box-shadow: none; }
-// .nav-collapse>li { float: right; }
-
-// .btn.btn-circle { border-radius: 50px; }
-// .btn.btn-outline { background-color: transparent; }
-
-// // //.navbar-nav.navbar-right .btn:not(.collapsed) {
-// //     background-color: rgb(111, 84, 153);
-// //     border-color: rgb(111, 84, 153);
-// //     color: rgb(255, 255, 255);
-// // }
-
-// .navbar.navbar-default .nav-collapse,
-// .navbar.navbar-inverse .nav-collapse {
-//     height: auto !important;
-//     transition: transform 0.3s;
-//     transform: translate(0px,-50px);
-// }
-// .navbar.navbar-default .nav-collapse.in,
-// .navbar.navbar-inverse .nav-collapse.in {
-//     transform: translate(0px,0px);
-// }
-
-// @media screen and (max-width: 767px) {
-//     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
-
-//     .navbar .nav-collapse { margin: 7.5px auto; padding: 0; }
-//     .navbar .nav-collapse .navbar-form { margin: 0; }
-//     .nav-collapse>li { float: none; }
-
-//     .navbar.navbar-default .nav-collapse,
-//     .navbar.navbar-inverse .nav-collapse {
-//         transform: translate(-100%,0px);
-//     }
-//     .navbar.navbar-default .nav-collapse.in,
-//     .navbar.navbar-inverse .nav-collapse.in {
-//         transform: translate(0px,0px);
-//     }
-
-//     .navbar.navbar-default .nav-collapse.slide-down,
-//     .navbar.navbar-inverse .nav-collapse.slide-down {
-//         transform: translate(0px,-100%);
-//     }
-//     .navbar.navbar-default .nav-collapse.in.slide-down,
-//     .navbar.navbar-inverse .nav-collapse.in.slide-down {
-//         transform: translate(0px,0px);
-//     }
-// }
-// .test_animation:hover {
-//     animation: pulse-shadow--collection 2s infinite !important;
-
-// }
+  border-top: 1px solid#eae5e5;
+  border-radius: 0px;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+.list-friend .input-search .glyphicon {
+  font-size: 13px;
+  color: #b9bcbf;
+}
+.list-friend .input-search .input-group-addon {
+  border-top: 1px solid #eae5e5;
+  border-radius: 0px;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+.list-friend .input-search .form-control {
+  border-color: #eae5e5 !important;
+  box-shadow: none !important;
+  height: 33px !important;
+  padding: 0px 0px !important;
+  font-size: 12px !important;
+}
+.list-friend .header {
+  background: #357b1e;
+  border: 0;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+  height: 26px;
+  padding: 1px;
+  z-index: 1;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.list-friend .header .title {
+  bottom: 5px;
+  position: absolute;
+  z-index: 999999999;
+  /* width: 100%; */
+  /* display: flex; */
+  /* float: right; */
+  right: 6px;
+  bottom: 5;
+}
+.list-friend .header .title i {
+  display: flex;
+  font-size: 14px;
+  color: #6e7379;
+  margin-bottom: 4px;
+}
+.list-friend .header .text-title {
+  display: none;
+}
+.list-friend .list {
+  margin-top: 50px;
+}
