--- a/assets/styles/chat/chatbox.css
+++ b/assets/styles/chat/chatbox.css
@@ -1,178 +1,162 @@
-@media only screen and (max-width : 540px)
-            {
-                .chat-sidebar
-                {
-                    display: none !important;
-                }
+@media only screen and (max-width: 540px) {
+  .chat-sidebar {
+    display: none !important;
+  }
 
-                .chat-popup
-                {
-                    display: none !important;
-                }
-            }
+  .chat-popup {
+    display: none !important;
+  }
+}
 
-            body
-            {
-                background-color: #e9eaed;
-            }
+body {
+  background-color: #e9eaed;
+}
 
-            .chat-sidebar
-            {
-                width: 200px;
-                position: fixed;
-                height: 100%;
-                right: 0px;
-                top: 0px;
-                padding-top: 10px;
-                padding-bottom: 10px;
-                border: 1px solid rgba(29, 49, 91, .3);
-            }
+.chat-sidebar {
+  width: 200px;
+  position: fixed;
+  height: 100%;
+  right: 0px;
+  top: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: 1px solid rgba(29, 49, 91, 0.3);
+}
 
-            .sidebar-name
-            {
-                padding-left: 10px;
-                padding-right: 10px;
-                margin-bottom: 4px;
-                font-size: 12px;
-            }
+.sidebar-name {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 4px;
+  font-size: 12px;
+}
 
-            .sidebar-name span
-            {
-                padding-left: 5px;
-            }
+.sidebar-name span {
+  padding-left: 5px;
+}
 
-            .sidebar-name a
-            {
-                display: block;
-                height: 100%;
-                text-decoration: none;
-                color: inherit;
-            }
+.sidebar-name a {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
+}
 
-            .sidebar-name:hover
-            {
-                background-color:#e1e2e5;
-            }
+.sidebar-name:hover {
+  background-color: #e1e2e5;
+}
 
-            .sidebar-name img
-            {
-                width: 32px;
-                height: 32px;
-                vertical-align:middle;
-            }
+.sidebar-name img {
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
+}
 
-            .popup-box
-            {
-              display: none;
-              position: fixed;
-              bottom: 0px;
-              right: 220px;
-              height: 346px;
-              margin-bottom: 24px;
-              background-color: rgb(237, 239, 244);
-              width: 300px;
-              border: 1px solid rgba(29, 49, 91, .3);
-            }
+.popup-box {
+  display: none;
+  position: fixed;
+  bottom: 0px;
+  right: 220px;
+  height: 346px;
+  margin-bottom: 24px;
+  background-color: rgb(237, 239, 244);
+  width: 300px;
+  border: 1px solid rgba(29, 49, 91, 0.3);
+}
 
-            .popup-box .popup-head
-            {
-                background-color: #6d84b4;
-                padding: 5px;
-                color: white;
-                font-weight: bold;
-                font-size: 14px;
-                clear: both;
-            }
+.popup-box .popup-head {
+  background-color: #6d84b4;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  clear: both;
+}
 
-            .popup-box .popup-head .popup-head-left
-            {
-                float: left;
-            }
+.popup-box .popup-head .popup-head-left {
+  float: left;
+}
 
-            .popup-box .popup-head .popup-head-right
-            {
-                float: right;
-                opacity: 0.5;
-            }
+.popup-box .popup-head .popup-head-right {
+  float: right;
+  opacity: 0.5;
+}
 
-            .popup-box .popup-head .popup-head-right a
-            {
-                text-decoration: none;
-                color: inherit;
-            }
+.popup-box .popup-head .popup-head-right a {
+  text-decoration: none;
+  color: inherit;
+}
 
-            .popup-box .popup-messages
-            {
-                height: 100%;
-                overflow-y: scroll;
-            }
+.popup-box .popup-messages {
+  height: 100%;
+  overflow-y: scroll;
+}
 
-            /* Custom bootstrap panel chat box*/
-           .chat-window .panel .panel-body{
-                height: 225px;
-            }
-            .col-md-12 {
-                /* width: 91% !important; */
-            }
-            .col-md-4{
-              padding-right: 3px !important;
-            }
-            .input-group .form-control{
-              z-index: 0 !important;
-            }
-            .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
-              z-index: 0 !important;
-            }
-            .timemsg-chatbox{
-              float: right;
+/* Custom bootstrap panel chat box*/
+.chat-window .panel .panel-body {
+  height: 225px;
+  display: flex;
+  flex-flow: column;
+}
+.col-md-12 {
+  /* width: 91% !important; */
+}
+.col-md-4 {
+  padding-right: 3px !important;
+}
+.input-group .form-control {
+  z-index: 0 !important;
+}
+.input-group-btn:last-child > .btn,
+.input-group-btn:last-child > .btn-group {
+  z-index: 0 !important;
+}
+.timemsg-chatbox {
+  float: right;
 
-                margin-left: 10px;
-                font-size: 8px;
-                font-weight: inherit;
-              color: rgb(212, 103, 24);
-            }
-            .message-box{
-                padding-bottom: 10px;
-            }
-            .message-rec{
-                clear: both;
-                width: 100%;
-            }
-            .img-chatbox{
-                float: left;
-                width: 16%;
-            }
-            .content-text{
-                float: left;
-                width: 82%;
-                
-            }
-            .message-chatbox-rc{
-               
-                 display: flex;
-                /* align-items: center; */
-                /* justify-content: center; */
-                /* text-align: center; */
-                margin-top: 3px;
-                font-size: 11px;
-                float: left;
-                background: #f1f0f1;
-                border-radius: 0px 8px 9px 7px;
-                padding: 3px 2px 4px 7px;
-                word-wrap: break-word;
-            }
-            .message-chatbox-sent{
-               
-                /*  display: flex; */
-                /* align-items: center; */
-                /* justify-content: center; */
-                /* text-align: center; */
-                margin-top: 3px;
-                clear: both;
-                font-size: 11px;
-                float: right;
-                background: #f1f0f1;
-                border-radius: 5px 6px 5px 7px;
-                padding: 2px 4px 2px 9px;
-                word-wrap: break-word;
-            }
+  margin-left: 10px;
+  font-size: 8px;
+  font-weight: inherit;
+  color: rgb(212, 103, 24);
+}
+.message-box {
+  padding-bottom: 10px;
+}
+.message-rec {
+  clear: both;
+  width: 100%;
+}
+.img-chatbox {
+  float: left;
+  width: 16%;
+}
+.content-text {
+  float: left;
+  width: 82%;
+}
+.message-chatbox-rc {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* text-align: center; */
+  margin-top: 3px;
+  font-size: 11px;
+  float: left;
+  background: #f1f0f1;
+  border-radius: 0px 8px 9px 7px;
+  padding: 3px 2px 4px 7px;
+  word-wrap: break-word;
+}
+.message-chatbox-sent {
+  /*  display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* text-align: center; */
+  margin-top: 3px;
+  clear: both;
+  font-size: 11px;
+  float: right;
+  background: #f1f0f1;
+  border-radius: 5px 6px 5px 7px;
+  padding: 2px 4px 2px 9px;
+  word-wrap: break-word;
+}
