--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,7 +15,7 @@
   -ms-user-select: none;
   user-select: none;
 
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -42,7 +42,7 @@
   height: 24px;
   padding: 0;
   border-radius: 30px;
-  background-color: #4D4D4D;
+  background-color: #4d4d4d;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
@@ -53,11 +53,11 @@
 }
 
 .react-toggle--checked .react-toggle-track {
-  background-color: #19AB27;
+  background-color: #19ab27;
 }
 
 .react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
-  background-color: #128D15;
+  background-color: #128d15;
 }
 
 .react-toggle-track-check {
@@ -110,9 +110,9 @@
   left: 1px;
   width: 22px;
   height: 22px;
-  border: 1px solid #4D4D4D;
+  border: 1px solid #4d4d4d;
   border-radius: 50%;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -125,30 +125,30 @@
 
 .react-toggle--checked .react-toggle-thumb {
   left: 27px;
-  border-color: #19AB27;
+  border-color: #19ab27;
 }
 
 .react-toggle--focus .react-toggle-thumb {
-  -webkit-box-shadow: 0px 0px 3px 2px #0099E0;
-  -moz-box-shadow: 0px 0px 3px 2px #0099E0;
-  box-shadow: 0px 0px 2px 3px #0099E0;
+  -webkit-box-shadow: 0px 0px 3px 2px #0099e0;
+  -moz-box-shadow: 0px 0px 3px 2px #0099e0;
+  box-shadow: 0px 0px 2px 3px #0099e0;
 }
 
 .react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb {
-  -webkit-box-shadow: 0px 0px 5px 5px #0099E0;
-  -moz-box-shadow: 0px 0px 5px 5px #0099E0;
-  box-shadow: 0px 0px 5px 5px #0099E0;
+  -webkit-box-shadow: 0px 0px 5px 5px #0099e0;
+  -moz-box-shadow: 0px 0px 5px 5px #0099e0;
+  box-shadow: 0px 0px 5px 5px #0099e0;
 }
 
-.post-repcomment{
-  padding-bottom:20px;
+.post-repcomment {
+  padding-bottom: 20px;
   background: #f2f3f5;
-  padding-top: 20px
+  padding-top: 20px;
 }
-.post-repcomment .input-repcomment{
+.post-repcomment .input-repcomment {
   border-radius: 50px;
 }
-.post-status{
+.post-status {
   /* padding-bottom: 20px; */
   border: 1px solid #e0e0d5;
   padding-top: 20px;
@@ -157,73 +157,73 @@
   border-radius: 5px;
   /* box-shadow: 0px 2px 2px 2px gainsboro */
 }
-.title-post{
+.title-post {
   font-weight: bold;
   background: #f5f5f5;
   font-size: 14px;
   padding: 5px;
   border-radius: 29px;
 }
-.content-like-post{
+.content-like-post {
   padding: 6px;
-    background: #f2f3f5;
-    border-bottom: 1px solid #e2e6e4;
-    border-top: 1px solid #e2e6e4;
-    padding-bottom: 9px;
-    padding-top: 9px;
+  background: #f2f3f5;
+  border-bottom: 1px solid #e2e6e4;
+  border-top: 1px solid #e2e6e4;
+  padding-bottom: 9px;
+  padding-top: 9px;
 }
-.img-rep-rep{
+.img-rep-rep {
   float: left;
   clear: both;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /* line-height: 45px; */
-    height: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* line-height: 45px; */
+  height: 33px;
 }
-.img-rep-rep img{
+.img-rep-rep img {
   width: 25px;
   border-radius: 50%;
-    float: left;
-    height: 25px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  float: left;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-.comment-item{
+.comment-item {
   width: 100%;
-    border-bottom: 1px solid #f3eded;
-    padding: 10px 0px 10px 0px;
-    margin-bottom: 5px;
-    clear: both;
-    /* margin-top: -15px; */
+  border-bottom: 1px solid #f3eded;
+  padding: 10px 0px 10px 0px;
+  margin-bottom: 5px;
+  clear: both;
+  /* margin-top: -15px; */
 }
-.text-rep .pull-right li{
+.text-rep .pull-right li {
   list-style: none;
 }
-.title-subject{
+.title-subject {
   font-weight: bold;
   padding: 8px 20px 8px 8px;
   float: left;
   border-radius: 19px;
   background: whitesmoke;
 }
-.title-subject .count-subject{
+.title-subject .count-subject {
   font-size: 11px;
   font-weight: normal;
   color: #b5a4a4;
   /* margin-right: 0px; */
   margin-left: 11px;
 }
-.btn-friend .btn{
+.btn-friend .btn {
   font-size: 12px;
-  padding: 3px 11px
+  padding: 3px 11px;
 }
-.btn-friend ul{
+.btn-friend ul {
   font-size: 12px;
 }
-.list-friend{
+.list-friend {
   background-clip: padding-box;
   background-color: #e9ebef;
   border-left: 1px solid rgba(175, 169, 169, 0.4);
@@ -234,36 +234,35 @@
   line-height: 16px;
   position: fixed;
   right: 0;
-  top: 0;
-  width: 236px;
+  /* top: 0; */
+  width: 264px;
   z-index: 300;
 }
-.list-friend .friend{
-clear: both;
+.list-friend .friend {
+  clear: both;
 }
-.list-friend .friend:hover{
+.list-friend .friend:hover {
   background-color: #dddfe2;
   box-shadow: 1px 0 0 #eaebed inset;
   text-decoration: none;
   cursor: pointer;
 }
-.status-user{
+.status-user {
   display: flex;
   height: 33px;
   float: right;
   /* justify-content: center; */
   align-items: center;
 }
-.status-user .time{
+.status-user .time {
   color: #b2b2bb;
-  font-size:9px;
-
+  font-size: 9px;
 }
-.status-online{
+.status-online {
   background: rgb(66, 183, 42);
-    border-radius: 50%;
-    display: inline-block;
-    height: 5px;
-    margin-left: 4px;
-    width: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  height: 5px;
+  margin-left: 4px;
+  width: 5px;
 }
