--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -188,13 +188,14 @@ img {
 }
 .post .user-detail {
   display: flex;
+  flex-flow: column;
 }
 .post .user-name {
   /* color: #4dab28; */
   /* font-weight: bold; */
   font-size: 12px;
   /* float: left; */
-  padding-right: 20px;
+
   display: flex;
 }
 .content-asw {
