--- a/assets/styles/userpage.css
+++ b/assets/styles/userpage.css
@@ -505,7 +505,7 @@ section#user_main div.content-main .head {
   padding-left: 7px;
 }
 .text-rep {
-  background: white;
+  background: #eff0f3;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 5px;
